# Quart-Tailwind-Template

./: .gitignore  LICENSE  README.md  pyproject.toml  tailwind.config.js
docs/: PLAN.md
src/: app.py  log_setup.py
src/routes/: index.py
src/templates/: base.html  index.html
